--- a/app/src/main/res/layout/activity_animation.xml
+++ b/app/src/main/res/layout/activity_animation.xml
@@ -17,10 +17,10 @@
             android:id="@+id/yellow"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="20dp"
             android:alpha="0"
             android:background="@drawable/red_block"
             android:backgroundTint="#FFFF00"
-            android:layout_margin="20dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
             app:layout_constraintEnd_toEndOf="parent"
@@ -31,10 +31,10 @@
             android:id="@+id/green"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="20dp"
             android:alpha="0"
             android:background="@drawable/red_block"
             android:backgroundTint="@color/green_box"
-            android:layout_margin="20dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
             app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
@@ -43,13 +43,13 @@
 
         <ImageView
             android:id="@+id/red"
-            android:visibility="invisible"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="20dp"
             android:alpha="0"
             android:background="@drawable/red_block"
-            android:layout_margin="20dp"
             android:tag="0"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guidelineMiddle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/guidelineVerticalMiddle"
@@ -59,10 +59,10 @@
             android:id="@+id/blue"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_margin="20dp"
             android:alpha="0"
             android:background="@drawable/red_block"
             android:backgroundTint="@color/button_blue"
-            android:layout_margin="20dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guidelineMiddle"
             app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
@@ -74,8 +74,8 @@
             android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_marginStart="23dp"
-            android:layout_marginEnd="22dp"
             android:layout_marginTop="100dp"
+            android:layout_marginEnd="22dp"
             android:src="@drawable/gpc_logo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -130,8 +130,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/gameStart"
-            android:layout_height="0dp"
             android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/yellow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -141,12 +141,12 @@
                 android:id="@+id/gameStartTextBox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/game_start"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="20sp"
-                android:textAlignment="center"
                 android:gravity="center"
-                android:textAllCaps="true"/>
+                android:text="@string/game_start"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="20sp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
