--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,8 +13,8 @@
 
 
     <Button
-        style="@style/HomeScreen_Buttons"
         android:id="@+id/chat_button"
+        style="@style/HomeScreen_Buttons"
         android:layout_width="0sp"
         android:layout_height="55dp"
         android:layout_marginBottom="24dp"
@@ -40,8 +39,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        style="@style/HomeScreen_Buttons"
         android:id="@+id/animation_button"
+        style="@style/HomeScreen_Buttons"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginTop="24dp"
@@ -96,10 +95,10 @@
 
     <ImageView
         android:id="@+id/lock_logo"
-        android:elevation="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="22dp"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/login_button"
         app:layout_constraintStart_toStartOf="@+id/login_button"
         app:layout_constraintTop_toTopOf="@+id/login_button"
@@ -107,10 +106,10 @@
 
     <ImageView
         android:id="@+id/animation_logo"
-        android:elevation="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="22dp"
+        android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/animation_button"
         app:layout_constraintStart_toStartOf="@+id/animation_button"
         app:layout_constraintTop_toTopOf="@+id/animation_button"
